<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="#ffffffff"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            android:layout_marginTop = "30dp"
            android:layout_marginLeft="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reason"
                    style="@style/textstyle"/>

                <Spinner
                    android:id="@+id/sp_reason"
                    style="@style/spinnerstyle"
                    android:layout_marginTop="20dp"/>
                <EditText
                    android:id="@+id/tv_reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:hint="@string/other"
                    android:visibility="gone"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="#ffffffff"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            android:layout_marginTop = "30dp"
            android:layout_marginLeft="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/interval"
                    style="@style/textstyle"/>


                <Spinner
                    android:id="@+id/sp_interval"
                    style="@style/spinnerstyle"
                    android:entries="@array/array_interval"
                    android:layout_marginTop="20dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/tv_interval"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:hint="@string/other"/>

                    <Spinner
                        android:id="@+id/sp_time"
                        style="@style/spinnerstyle"
                        android:entries="@array/array_time"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="#ffffffff"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            android:layout_marginTop = "30dp"
            android:layout_marginLeft="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_now"
                    style="@style/textstyle"/>

                <Spinner
                    android:id="@+id/sp_level_now"
                    style="@style/spinnerstyle"
                    android:entries="@array/array_level"/>

                <EditText
                    android:id="@+id/tv_level_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:hint="@string/other"
                    android:visibility="gone"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="#ffffffff"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            android:layout_marginTop = "30dp"
            android:layout_marginLeft="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_goal"
                    style="@style/textstyle"/>


                <Spinner
                    android:id="@+id/sp_level_goal"
                    style="@style/spinnerstyle"
                    android:entries="@array/array_level"/>

                <EditText
                    android:id="@+id/tv_level_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:hint="@string/other"
                    android:visibility="gone"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>




        <Button
            android:id="@+id/btn_confirm"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"/>
    </LinearLayout>
</ScrollView>
